<resources>
    <string name="app_name">SolarMap</string>

    <!--map contraints for duluth given in wgs84 coordinates-->
    <string name="YMax">46.881636</string>
    <string name="YMin">46.648345</string>
    <string name="XMin">-91.922425</string>
    <string name="XMax">-92.304200</string>

    <string name="geocode">http://geocode.arcgis.com/arcgis/rest/services/World/GeocodeServer</string>

    <!-- Minnesota solar energy image layer -->
    <string name="raw_solar">https://gis.uspatial.umn.edu/arcgis/rest/services/solar/mn_solar/ImageServer</string>
    <!-- Rooftop layer -->
    <string name="foot_dlh_5k">http://umn.maps.arcgis.com/home/item.html?id=3f1a6501a86948ecb167844cca02841c</string>
    <!-- Rooftop solar energy layer -->
    <string name="insol_dlh_annovtpk">http://tiles.arcgis.com/tiles/8df8p0NlLFEShl0r/arcgis/rest/services/insol_dlh_annovtpk/VectorTileServer</string>s
    <!--Web app version-->
    <string name="solar_potential_map_2">http://umn.maps.arcgis.com/home/item.html?id=53151b88aa124cf09d5a58c02bfe5a33</string>
    <!--XML file filled with information of past solar projects-->
    <string name="past_projects">http://www.cleanenergyprojectbuilder.org/solar-projects.xml</string>

    <string name="country_code">United States</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="navigation_drawer_map">Map</string>
    <string name="navigation_drawer_achievements">Achievements</string>
    <string name="navigation_drawer_saved_locations">Saved Locations</string>
    <string name="navigation_drawer_settings">Settings</string>
    <string name="navigation_drawer_help">Help</string>

    <!-- This is the text strings for MapFragment -->
    <string name="action_settings">Settings</string>
    <string name="action_search">Place Search</string>
    <string name="search_hint">Search Address or Place</string>
    <string name="menu_search">Search</string>

    <string name="address_search">Searching for Address</string>
    <string name="addressSearchFailed">Address Search Failed</string>
    <string name="noResultsFound">No Results Found</string>

    <string name="cantFindLocation">Unable to Find the Location</string>
    <string name="cantLocateCurrentPosition">Unable to Locate Current Position</string>
    <!-- This is the text strings for MapFragment -->

    <!-- TODO: Remove or change this placeholder text -->
    <string name="title_activity_startup_login">Sign in</string>

    <!-- Strings related to dialog buttons -->
    <string name="moreInfo">More Info</string>
    <string name="shareInterest">Show interest!</string>
    <string name="ignore">Ignore</string>

    <!-- Strings for web view -->
    <string name="reloadWebpage">Reload</string>
    <string name="backButtonWebpage">Go Back</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_up">Register an account</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
</resources>
