<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_map"
            android:icon="@drawable/ic_menu_map"
            android:title="@string/navigation_drawer_map" />
        <item
            android:id="@+id/nav_edu_content"
            android:icon="@drawable/ic_menu_edu_content"
            android:title="Learn More" />
        <item
            android:id="@+id/nav_saved_locations"
            android:icon="@drawable/ic_menu_saved_locations"
            android:title="@string/navigation_drawer_saved_locations" />
        <item
            android:id="@+id/nav_achievements"
            android:icon="@drawable/ic_menu_achievements"
            android:title="@string/navigation_drawer_achievements" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_menu_settings"
            android:title="@string/navigation_drawer_settings" />
        <item
            android:id="@+id/nav_help"
            android:icon="@drawable/ic_menu_help"
            android:title="@string/navigation_drawer_help" />
    </group>

</menu>